Added focus and escape directives, similar to TodoMVC

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -20,3 +20,5 @@ html
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js')
     script(src='scripts/app.js')
     script(src='scripts/controllers/todoCtrl.js')
+    script(src='scripts/directives/inputFocus.js')
+    script(src='scripts/directives/inputEscape.js')
