--- a/app/views/error.jade
+++ b/app/views/error.jade
@@ -1,5 +1,5 @@
 extends layout
 block content
-  h1= message
-  //- h2= error.status
-  //- pre #{error.stack}
+  .narrow
+    h1= title
+    p= message
