--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -16,9 +16,9 @@ html
         block content
     include footer
       
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js')
     script(src='scripts/app.js')
     script(src='scripts/controllers/todoCtrl.js')
+    script(src='scripts/controllers/navCtrl.js')
     script(src='scripts/directives/inputFocus.js')
     script(src='scripts/directives/inputEscape.js')
