--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -33,7 +33,7 @@
         color: rgba(#000000, 0.4);
       }
 
-      .show-nav & {
+      .showMobileNav & {
         transform: rotate(90deg);
         color: #FFFFFF;
       }
@@ -64,7 +64,7 @@ nav:not(.account) {
   background: darken($nav-background-mobile, 10%);
   box-shadow: 0 0 40px;
 
-  .show-nav & {
+  .showMobileNav & {
     top: 55px;
   }
 
@@ -78,7 +78,7 @@ nav:not(.account) {
     padding-bottom: 0;
     background: #FFFFFF;
 
-    .show-nav & {
+    .showMobileNav & {
       top: 0px;
     }
   }
